variable metabase url

--- a/src/app/pages/dashboards/principal/principal.component.html
+++ b/src/app/pages/dashboards/principal/principal.component.html
@@ -1,6 +1,6 @@
 <main>
   <p-card styleClass="card-adjust">
     <iframe class="metabase"
-    src="http://localhost:2000/public/dashboard/3f3e7eaa-4285-4fd1-b34d-cb9d53587271"></iframe>
+    [src]="iframeLSrc"></iframe>
   </p-card>
 </main>
