Processo Informações Andamento

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 <p-confirmDialog header="Confirmação" icon="pi pi-exclamation-triangle" #confirmacao>
     <p-footer>
       <button type="button" pButton pRipple icon="pi pi-check" label="Sim" (click)="confirmacao.accept()"
-        class="p-button-success"></button>
+        class="p-button-warning"></button>
       <button type="button" pButton pRipple icon="pi pi-times" label="Não" (click)="confirmacao.reject()"
         class="p-button-secondary"></button>
     </p-footer>
