correção agendamento e processo

--- a/src/app/pages/processos/lista-processos/lista-processos.component.html
+++ b/src/app/pages/processos/lista-processos/lista-processos.component.html
@@ -12,10 +12,10 @@
             icon="pi pi-refresh" (click)="refresh()"></button>
         </div>
       </div>
-      <div>
+      <!-- <div>
         <p-splitButton styleClass="p-button-warning" #ua label="Opções" icon="pi pi-cog"
           (onClick)="ua.onDropdownButtonClick(null)" [model]="items"></p-splitButton>
-      </div>
+      </div> -->
     </div>
   
     <p-table #tabela [value]="processos" [columns]="selectedColumns" styleClass="p-datatable-striped p-datatable-gridlines"
