--- a/src/app/pages/agendamentos/lista-agendamentos/lista-agendamentos.component.html
+++ b/src/app/pages/agendamentos/lista-agendamentos/lista-agendamentos.component.html
@@ -8,7 +8,7 @@
             tooltipPosition="top" routerLink="novo"></button>
         </div>
         <div>
-          <button pButton pRipple type="button" class=" p-button-raised p-button-warning ml-2" pTooltip="Atualizar" tooltipPosition="top"
+          <button pButton pRipple type="button" class="p-button-raised p-button-warning ml-2" pTooltip="Atualizar" tooltipPosition="top"
             icon="pi pi-refresh" (click)="refresh()"></button>
         </div>
       </div>
@@ -35,93 +35,129 @@
         <tr>
           <th class="tdAcoes">&nbsp;</th>
           <th *ngFor="let cols of columns; let i = index" [ngStyle]="{'min-width': cols.width}">
-            <form #formFiltro="ngForm" autocomplete="off">
-              <div *ngIf="cols.type !== 'date' && cols.type !== 'status'" class="flex p-2"
-                [ngStyle]="{'min-width': cols.width}">
-                <input pInputText class="white-space-nowrap overflow-hidden text-overflow-ellipsis mr-2 w-full"
-                  placeholder="Pesquisar" type="text" name="pesquisa{{i}}" [(ngModel)]="cols.qty" validateQuantity
-                  #qtyInput (keyup)="search(cols)" (blur)="applySearch(cols)" pTooltip="Pesquisa nessa coluna"
-                  tooltipPosition="top">
-              </div>
-              <div *ngIf="cols.type === 'date' && cols.field === 'datacriacao'" class="flex p-2"
-                [ngStyle]="{'min-width': cols.width}">
-                <p-overlayPanel #dataCriacao>
-                  <ng-template pTemplate>
-                    <div class="grid flex justify-content-center align-items-center">
-                      <div class="col-1">
-                        <span class="spanDeAte">De</span>
-                      </div>
-                      <div class="col-5">
-                        <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtcriacaode"
-                          (keyup)="searchData('datacriacaode')" (blur)="searchData('datacriacaode')" type="tel"
-                          class="w-full" [dropSpecialCharacters]="false" [(ngModel)]="datacriacaode"
-                          #dtcriacaode="ngModel" minlength="10" />
-                        <app-message [control]="dtcriacaode" error="minlength" text="Digite uma data completa">
-                        </app-message>
-                      </div>
-                      <div class="col-1"> 
-                        <span class="spanDeAte">Até</span>
-                      </div> 
-                      <div class="col-5">
-                        <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtcriacaoate"
-                          (keyup)="searchData('datacriacaoate')" (blur)="searchData('datacriacaoate')" type="tel"
-                          class="w-full" [(ngModel)]="datacriacaoate" [dropSpecialCharacters]="false"
-                          #dtcriacaoate="ngModel" minlength="10" />
-                        <app-message [control]="dtcriacaoate" error="minlength" text="Digite uma data completa">
-                        </app-message>
-                      </div>
+            <div *ngIf="cols.type !== 'date' && cols.type !== 'status'" class="flex p-2"
+              [ngStyle]="{'min-width': cols.width}">
+              <input pInputText class="white-space-nowrap overflow-hidden text-overflow-ellipsis mr-2 w-full"
+                placeholder="Pesquisar" type="text" name="pesquisa{{i}}" [(ngModel)]="cols.qty" validateQuantity
+                #qtyInput (keyup)="search(cols)" (blur)="applySearch(cols)" pTooltip="Pesquisa nessa coluna"
+                tooltipPosition="top">
+            </div>
+            <div *ngIf="cols.type === 'date' && cols.field === 'dataatendimento'" class="flex p-2"
+              [ngStyle]="{'min-width': cols.width}">
+              <p-overlayPanel #dataAtendimento>
+                <ng-template pTemplate>
+                  <div class="grid flex justify-content-center align-items-center">
+                    <div class="col-1">
+                      <span class="spanDeAte">De</span>
                     </div>
-                    <div class="grid flex justify-content-end align-items-center mt-2 mr-1">
-                      <button pButton pRipple type="button" label="Limpar Filtro" class="p-button-raised p-button-warning"
-                        icon="fa-solid fa-filter" (click)="limparData('dataCriacao')"></button>
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtatendimentode"
+                        (keyup)="searchData('dataatendimentode')" (blur)="searchData('dataatendimentode')" type="tel"
+                        class="w-full" [dropSpecialCharacters]="false" [(ngModel)]="dataatendimentode"
+                        #dtatendimentode="ngModel" minlength="10" />
+                      <app-message [control]="dtatendimentode" error="minlength" text="Digite uma data completa">
+                      </app-message>
                     </div>
-                    
-                  </ng-template>
-                </p-overlayPanel>
-                <button pButton pRipple type="button" label="Pesquisar"
-                  [ngClass]="(datacriacaode || datacriacaoate) ? 'p-button-warning' : 'p-button-raised p-button-secondary p-button-outlined'"
-                  class="p-button-raised  w-full" (click)="dataCriacao.toggle($event)"></button>
-              </div>
-              <div *ngIf="cols.type === 'date' && cols.field === 'dataalteracao'" class="flex p-2"
-                [ngStyle]="{'min-width': cols.width}">
-                <p-overlayPanel #dataAlteracao>
-                  <ng-template pTemplate>
-                    <div class="grid flex justify-content-center align-items-center">
-                      <div class="col-1">
-                        <span class="spanDeAte">De</span>
-                      </div>
-                      <div class="col-5">
-                        <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtalteracaode"
-                          (keyup)="searchData('dataalteracaode')" (blur)="searchData('dataalteracaode')" type="tel"
-                          class="w-full" [dropSpecialCharacters]="false" [(ngModel)]="dataalteracaode"
-                          #dtalteracaode="ngModel" minlength="10" />
-                        <app-message [control]="dtalteracaode" error="minlength" text="Digite uma data completa">
-                        </app-message>
-                      </div>
-                      <div class="col-1">
-                        <span class="spanDeAte">Até</span>
-                      </div>
-                      <div class="col-5">
-                        <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtalteracaoate"
-                          (keyup)="searchData('dataalteracaoate')" (blur)="searchData('dataalteracaoate')" type="tel"
-                          class="w-full" [(ngModel)]="dataalteracaoate" [dropSpecialCharacters]="false"
-                          #dtalteracaoate="ngModel" minlength="10" />
-                        <app-message [control]="dtalteracaoate" error="minlength" text="Digite uma data completa">
-                        </app-message>
-                      </div>
+                    <div class="col-1"> 
+                      <span class="spanDeAte">Até</span>
+                    </div> 
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtatendimentoate"
+                        (keyup)="searchData('dataatendimentoate')" (blur)="searchData('dataatendimentoate')" type="tel"
+                        class="w-full" [(ngModel)]="dataatendimentoate" [dropSpecialCharacters]="false"
+                        #dtatendimentoate="ngModel" minlength="10" />
+                      <app-message [control]="dtatendimentoate" error="minlength" text="Digite uma data completa">
+                      </app-message>
                     </div>
-                    <div class="grid flex justify-content-end align-items-center mt-2 mr-1">
-                      <button pButton pRipple type="button" label="Limpar Filtro" class="p-button-raised p-button-warning"
-                        icon="fa-solid fa-filter" (click)="limparData('dataAlteracao')"></button>
+                  </div>
+                  <div class="grid flex justify-content-end align-items-center mt-2 mr-1">
+                    <button pButton pRipple type="button" label="Limpar Filtro" class="p-button-raised p-button-warning"
+                      icon="fa-solid fa-filter" (click)="limparData('dataAtendimento')"></button>
+                  </div>
+                </ng-template>
+              </p-overlayPanel>
+              <button pButton pRipple type="button" label="Pesquisar"
+                [ngClass]="(dataatendimentode || dataatendimentoate) ? 'p-button-warning' : 'p-button-raised p-button-secondary p-button-outlined'"
+                class="p-button-raised  w-full" (click)="dataAtendimento.toggle($event)"></button>
+            </div>
+
+            <div *ngIf="cols.type === 'date' && cols.field === 'datacriacao'" class="flex p-2"
+              [ngStyle]="{'min-width': cols.width}">
+              <p-overlayPanel #dataCriacao>
+                <ng-template pTemplate>
+                  <div class="grid flex justify-content-center align-items-center">
+                    <div class="col-1">
+                      <span class="spanDeAte">De</span>
                     </div>
-                  </ng-template>
-                  
-                </p-overlayPanel>
-                <button pButton pRipple type="button" label="Pesquisar"
-                  [ngClass]="(dataalteracaode || dataalteracaoate) ? 'p-button-warning' : 'p-button-raised p-button-secondary p-button-outlined'"
-                  class="p-button-raised  w-full" (click)="dataAlteracao.toggle($event)"></button>
-              </div>
-            </form>
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtcriacaode"
+                        (keyup)="searchData('datacriacaode')" (blur)="searchData('datacriacaode')" type="tel"
+                        class="w-full" [dropSpecialCharacters]="false" [(ngModel)]="datacriacaode"
+                        #dtcriacaode="ngModel" minlength="10" />
+                      <app-message [control]="dtcriacaode" error="minlength" text="Digite uma data completa">
+                      </app-message>
+                    </div>
+                    <div class="col-1"> 
+                      <span class="spanDeAte">Até</span>
+                    </div> 
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtcriacaoate"
+                        (keyup)="searchData('datacriacaoate')" (blur)="searchData('datacriacaoate')" type="tel"
+                        class="w-full" [(ngModel)]="datacriacaoate" [dropSpecialCharacters]="false"
+                        #dtcriacaoate="ngModel" minlength="10" />
+                      <app-message [control]="dtcriacaoate" error="minlength" text="Digite uma data completa">
+                      </app-message>
+                    </div>
+                  </div>
+                  <div class="grid flex justify-content-end align-items-center mt-2 mr-1">
+                    <button pButton pRipple type="button" label="Limpar Filtro" class="p-button-raised p-button-warning"
+                      icon="fa-solid fa-filter" (click)="limparData('dataCriacao')"></button>
+                  </div>
+                </ng-template>
+              </p-overlayPanel>
+              <button pButton pRipple type="button" label="Pesquisar"
+                [ngClass]="(datacriacaode || datacriacaoate) ? 'p-button-warning' : 'p-button-raised p-button-secondary p-button-outlined'"
+                class="p-button-raised  w-full" (click)="dataCriacao.toggle($event)"></button>
+            </div>
+
+            <div *ngIf="cols.type === 'date' && cols.field === 'dataalteracao'" class="flex p-2"
+              [ngStyle]="{'min-width': cols.width}">
+              <p-overlayPanel #dataAlteracao>
+                <ng-template pTemplate>
+                  <div class="grid flex justify-content-center align-items-center">
+                    <div class="col-1">
+                      <span class="spanDeAte">De</span>
+                    </div>
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtalteracaode"
+                        (keyup)="searchData('dataalteracaode')" (blur)="searchData('dataalteracaode')" type="tel"
+                        class="w-full" [dropSpecialCharacters]="false" [(ngModel)]="dataalteracaode"
+                        #dtalteracaode="ngModel" minlength="10" />
+                      <app-message [control]="dtalteracaode" error="minlength" text="Digite uma data completa">
+                      </app-message>
+                    </div>
+                    <div class="col-1">
+                      <span class="spanDeAte">Até</span>
+                    </div>
+                    <div class="col-5">
+                      <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtalteracaoate"
+                        (keyup)="searchData('dataalteracaoate')" (blur)="searchData('dataalteracaoate')" type="tel"
+                        class="w-full" [(ngModel)]="dataalteracaoate" [dropSpecialCharacters]="false"
+                        #dtalteracaoate="ngModel" minlength="10" />
+                      <app-message [control]="dtalteracaoate" error="minlength" text="Digite uma data completa">
+                      </app-message>
+                    </div>
+                  </div>
+                  <div class="grid flex justify-content-end align-items-center mt-2 mr-1">
+                    <button pButton pRipple type="button" label="Limpar Filtro" class="p-button-raised p-button-warning"
+                      icon="fa-solid fa-filter" (click)="limparData('dataAlteracao')"></button>
+                  </div>
+                </ng-template>
+              </p-overlayPanel>
+              <button pButton pRipple type="button" label="Pesquisar"
+                [ngClass]="(dataalteracaode || dataalteracaoate) ? 'p-button-warning' : 'p-button-raised p-button-secondary p-button-outlined'"
+                class="p-button-raised  w-full" (click)="dataAlteracao.toggle($event)"></button>
+            </div>
           </th>
         </tr>
       </ng-template>
@@ -130,8 +166,7 @@
         <tr class="ui-selectable-row" [pSelectableRow]="agendamentos">
           <td class="tdEditar">
             <button pButton pRipple type="button" class="p-button-text p-button-warning"
-              pTooltip="Editar" icon="pi pi-pencil" tooltipPosition="top" [routerLink]="['/agendamentos', agendamentos._id]"
-              ></button>
+              pTooltip="Editar" icon="pi pi-pencil" tooltipPosition="top" [routerLink]="['/agendamentos', agendamentos._id]"></button>
           </td>
           <td class="responsivetable" *ngFor="let cols of columns" [ngStyle]="{'min-width': cols.width}"
             pReorderableColumn
