timer no calendario de agendamento

--- a/src/app/pages/agendamentos/cadastro-agendamento/cadastro-agendamento.component.html
+++ b/src/app/pages/agendamentos/cadastro-agendamento/cadastro-agendamento.component.html
@@ -28,6 +28,7 @@
           <p-calendar
             styleClass="w-full"
             name="dataatendimento"
+            [showTime]="true"
             dateFormat="dd/mm/yy"
             [readonlyInput]="true"
             [(ngModel)]="newagendamento.dataatendimento"
