--- a/src/app/pages/clientes/lista-clientes/lista-clientes.component.html
+++ b/src/app/pages/clientes/lista-clientes/lista-clientes.component.html
@@ -39,7 +39,7 @@
               <div *ngIf="cols.type !== 'date' && cols.type !== 'status'" class="flex p-2"
                 [ngStyle]="{'min-width': cols.width}">
                 <input pInputText class="white-space-nowrap overflow-hidden text-overflow-ellipsis mr-2 w-full"
-                  placeholder="Pesquisar" type="text" name="pesquisa{{i}}" [(ngModel)]="cols.qty" validateQuantity
+                  placeholder="Pesquisar" type="text" name="pesquisa{{i}}" [(ngModel)]="cols.qty" validateQuantity [pKeyFilter]="regex.stringNumber"
                   #qtyInput (keyup)="search(cols)" (blur)="applySearch(cols)" pTooltip="Pesquisa nessa coluna"
                   tooltipPosition="top">
               </div>
