--- a/src/app/pages/processos/lista-processos/lista-processos.component.html
+++ b/src/app/pages/processos/lista-processos/lista-processos.component.html
@@ -66,7 +66,7 @@
                         <input pInputText matInput mask="d0/M0/0000" placeholder="00/00/0000" name="dtcriacaoate"
                           (keyup)="searchData('datacriacaoate')" (blur)="searchData('datacriacaoate')" type="tel"
                           class="w-full" [(ngModel)]="datacriacaoate" [dropSpecialCharacters]="false"
-                          #dtcriacaoate="ngModel" minlength="10" />
+                          #dtcriacaoate="ngModel" minlength="10" [pKeyFilter]="regex.stringNumber">
                         <app-message [control]="dtcriacaoate" error="minlength" text="Digite uma data completa">
                         </app-message>
                       </div>
